Split to fkresidual.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ include_directories(${CERES_INCLUDE_DIRS})
 
 project(ceres-hello)
 add_executable(${PROJECT_NAME} "main.cpp")
-add_executable(curve "curve_fitting.cpp")
+#add_executable(curve "curve_fitting.cpp")
 target_link_libraries(${PROJECT_NAME} ${CERES_LIBRARIES})
-target_link_libraries(curve ${CERES_LIBRARIES})
+#target_link_libraries(curve ${CERES_LIBRARIES})
 
 
