--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project(ceres-hello)
-
-# ceres
-find_package(Ceres REQUIRED)
-include_directories(${CERES_INCLUDE_DIRS})
-
-
-add_executable(${PROJECT_NAME} "main.cpp")
-target_link_libraries(${PROJECT_NAME} ${CERES_LIBRARIES})
+project(detect-sphere)
 
 #pcl
 find_package(PCL 1.3 REQUIRED COMPONENTS common io)
@@ -20,8 +12,5 @@ add_definitions(${PCL_DEFINITIONS})
 add_executable("detect-sphere" "pclmain.cpp")
 target_link_libraries("detect-sphere" ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
 
-
-#add_executable(curve "curve_fitting.cpp")
-#target_link_libraries(curve ${CERES_LIBRARIES})
 
 
