--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 project(detect-sphere)
 
 #pcl
-find_package(PCL 1.3 REQUIRED COMPONENTS common io)
+find_package(PCL 1.3 REQUIRED)
 
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
@@ -10,7 +10,7 @@ add_definitions(${PCL_DEFINITIONS})
 
 
 add_executable("detect-sphere" "pclmain.cpp")
-target_link_libraries("detect-sphere" ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
+target_link_libraries("detect-sphere" ${PCL_LIBRARIES})
 
 
 
