New executable to experiment with clustering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,14 @@ link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
 
-add_executable("detect-sphere" "pclmain.cpp")
+SET(TARGET_H common.h)
+SET(TARGET_SRC common.cpp)
+
+add_executable("detect-sphere" "pclmain.cpp"  ${TARGET_H} ${TARGET_SRC})
 target_link_libraries("detect-sphere" ${PCL_LIBRARIES})
+
+add_executable("cluster" "cluster.cpp" ${TARGET_H} ${TARGET_SRC})
+target_link_libraries("cluster" ${PCL_LIBRARIES})
 
 
 
